system/authentik/resources/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  virtualhost:
    fqdn: authentik.mgmt.cedille.club
    tls:
      secretName: authentik-tls
  routes:
  - conditions:
    - header:
        contains: application/grpc
        name: Content-Type
    - prefix: /websocket
    enableWebsockets: true
    services:
    - name: authentik-server
      port: 80
      protocol: h2c
  - services:
      - name: authentik-server
        port: 80
