system/authentik/resources/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  virtualhost:
    fqdn: authentik.mgmt.cedille.club
    tls:
      secretName: authentik-tls
  routes:
    - conditions:
        - prefix: /websocket
          enableWebsockets: true
        - header:
            contains: application/grpc
            name: Content-Type
      services:
        - name: authentik-server
          port: 9443
          protocol: h2c
        - services:
            - name: authentik-server
              port: 9443
